fix(resume): adjust/update content; make sure colors have enough contrast; switch to more neutral blue for accent color.

--- a/docs/resume/resume.css
+++ b/docs/resume/resume.css
@@ -1,7 +1,7 @@
 :root {
   --fontfamily-sans: 'Open Sans', sans-serif;
   --fontfamily-serif: 'Noto Serif', serif;
-  --color-accent: #4BACC6;
+  --color-accent: #0878bb;
   --color-text: #333;
   --color-neutral-light: #fff;
   --color-neutral-mid: #ccc;
@@ -20,10 +20,12 @@ body {
   padding:2rem 2rem 2rem;
   background-color:var(--color-neutral-light);
   color: var(--color-text);
-  box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+          box-sizing:border-box;
 }
 *, *:before, *:after {
-  box-sizing:inherit;
+  -webkit-box-sizing:inherit;
+          box-sizing:inherit;
 }
 
 .fontserif {
@@ -71,6 +73,7 @@ h3 {
 a, a:link, a:active, a:visited {
   color: var(--color-accent);
   text-decoration:none;
+  font-weight: 600;
 }
 
 p {
@@ -89,9 +92,16 @@ li {
 
 /* ::::: Content */
 ul.contact {
+  display:-webkit-box;
+  display:-ms-flexbox;
   display:flex;
-  flex-flow:row wrap;
-  justify-content: center;
+  -webkit-box-orient:horizontal;
+  -webkit-box-direction:normal;
+      -ms-flex-flow:row wrap;
+          flex-flow:row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin:0;
   padding:0;
   font-weight:600;
